FIXED Maven tests => now we must find the right location for the dynamic toolbox images