@@ -33,14 +33,14 @@
     <dependency>
       <groupId>org.testfx</groupId>
       <artifactId>testfx-core</artifactId>
-      <version>4.0.16-alpha</version>
-      <scope>test</scope>
+      <version>4.0.15-alpha</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.testfx</groupId>
       <artifactId>testfx-junit5</artifactId>
-      <version>4.0.16-alpha</version>
-      <scope>test</scope>
+      <version>4.0.15-alpha</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
@@ -76,6 +76,15 @@
         <version>3.9.0</version>
         <configuration>
           <release>17</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
+        <version>3.0.0-M5</version>
+        <configuration>
+          <argLine>--add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
         </configuration>
       </plugin>
 
